# rage

./: Cargo.toml  run.sh
age/: Cargo.toml
age-core/: CHANGELOG.md  Cargo.toml
age-core/src/: format.rs  plugin.rs
age-plugin/: Cargo.toml
age-plugin/examples/: age-plugin-trezor.rs  age-plugin-unencrypted.rs
age-plugin/src/: identity.rs  lib.rs  recipient.rs
age/src/: cli_common.rs  error.rs  format.rs  identity.rs  keys.rs  lib.rs  plugin.rs  primitives.rs  protocol.rs  util.rs  x25519.rs
age/src/format/: scrypt.rs  ssh_ed25519.rs  ssh_rsa.rs  x25519.rs
age/src/primitives/: stream.rs
age/src/protocol/: decryptor.rs
age/tests/: test_vectors.rs
