[package]
name = "age-core"
description = "[BETA] Common functions used across the age crates"
version = "0.4.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
repository = "https://github.com/str4d/rage"
readme = "README.md"
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[dependencies]
# Dependencies required by the age specification:
# - Base64 from RFC 4648
base64 = "0.11"

# Parsing
cookie-factory = "0.3.1"
nom = "5"
