[package]
name = "age"
description = "[BETA] A simple, secure, and modern encryption tool."
version = "0.4.0"
authors = ["Jack Grigg <thestr4d@gmail.com>"]
repository = "https://github.com/str4d/rage"
readme = "README.md"
keywords = ["rage", "encryption"]
categories = ["cryptography"]
license = "MIT OR Apache-2.0"
edition = "2018"

[badges]
maintenance = { status = "experimental" }

[dependencies]
age-core = { version = "0.4.0", path = "../age-core" }

# Dependencies required by the age specification:
# - Base64 from RFC 4648
base64 = "0.11"

# - CSPRNG
rand = "0.7"

# Parsing
cookie-factory = "0.3.1"
nom = "5"

# Secret management
secrecy = "0.6"
subtle = "2"
zeroize = "1"

# Async I/O
futures = { version = "0.3", optional = true }
pin-project = "0.4"

[dev-dependencies]
futures-test = "0.3"
quickcheck = "0.9"
quickcheck_macros = "0.9"

[features]
default = ["async"]
async = ["futures"]
